  - save command added, it writes the statefile and then the configfile.
  - delattr added to delete single attributes
  - list/xmllist format changed, they contain more information.
  - "define/set/get/attr name ?" returns a list of possible arguments
    in the same format. This data is contained in the xmllist.
  - disable attribute for at/notify/filelog
  - rename added

- Rudi, Tue Mar 27 20:43:15 MEST 2007
  fhemweb.pl (webpgm2) changes:
  - adopted to the new syntax
  - better commandline support (return <pre> formatted)
  - FileLog attribute logtype added, and 4 logtypes (== gnuplot files)
    defined: fs20, fht, ks300_1, ks300_2
  - links in the commandref.html file added
  - device dependent attribute and set support

- Pest, Sun Apr 08 17:55:15 MEST 2007
  em1010.pl:
  - Make difference between sensors 1..4 and 5..
  - Checked values for sensor 5 (cur.energy + cur.power) - ok
  - Checked values for sensor 5 cur.energy is ok, cur.power still off.
    Correction factor needs to be determined.
  - setTime: Without argument, now the current time of the PC is used.
  - setRperKW: Factor of 10 required, 75 U/kWh -> 750.

- Pest, Tue Apr 10 20:31:22 MEST 2007
  em1010.pl:
  - Introduced new double-word function (dw)
  - getDevStatus: energy values kWh/h, kWh/d, total.

- Rudi Sat Apr 14 10:34:36 MEST 2007
  final documentations, release 4.0. Tagged as FHEM_4_0

- Pest, Sat Apr 14 14:21:00 MEST 2007
  - doc: linux.html (private udev-rules, not 50-..., ATTRS)

- Pest, Sun Apr 15 14:54:30 MEST 2007
  - doc: fhem.pl and commandref.html (notifyon -> notify, correction of examples)

- Rudi, Tue Apr 24 08:10:43 MEST 2007
  - feature: modify command added. It helps change e.g. only the time component
    for an at command, without deleting and creating it again and then
    reapplying all the attributes.
  - feature: the "-" character is disallowed in defined names. Use dot (.) or _
    instead.  The - is used to separate ranges in the set command.